# project_3_serach_bd

./: .flake8  .gitignore  README.md  main.py  pyproject.toml
classes/: db_manager.py  hh_parser.py
utils/: output_functions.py  utils.py
